[package]
name = "bevy_pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bevy = "0.7"
rand = "0.8.5"
bevy_framepace = "0.4.0"
bevy_rapier2d =  { version = "0.14.1", features = [ "debug-render" ] }
iyes_loopless = "0.6.0"

[workspace]
resolver = "2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3